hphp/hack/test/typecheck/parse_ignore_newline.php.exp
File "parse_ignore_newline.php", line 25, characters 10-14:
Invalid return type (Typing[4110])
File "parse_ignore_newline.php", line 24, characters 15-17:
This is an int
File "parse_ignore_newline.php", line 25, characters 10-14:
It is incompatible with a bool
